--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -35,4 +35,4 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     run: terraform apply -auto-approve
     env:
-      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }} 
+      GOOGLE_CREDENTIALS: ${{ secrets.GCP_TF_SA_KEY }} 
