--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,12 +8,12 @@ name: "Code scanning"
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'node-test/**'
+    paths-ignore:
+      - '.github/'
   pull_request:
     branches: [ main ]
-    paths:
-      - 'node-test/**'
+    paths-ignore:
+      - '.github/'
 
 jobs:
   analyze:
