--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,11 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+ - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "daily"
+ - package-ecosystem: "terraform"
+    directory: "/"
+    schedule:
+      interval: "daily"
