--- a/.github/workflows/workflow_terraform_dispatch.yml
+++ b/.github/workflows/workflow_terraform_dispatch.yml
@@ -39,7 +39,7 @@ jobs:
           }
           
     - name: Reusable Terra
-      uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml@terraform
+      uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml@main
       with:
         secrets:
           token: ${{ secrets.GCP_TF_SA_KEY }}
