--- a/.github/workflows/workflow_terraform_dispatch.yml
+++ b/.github/workflows/workflow_terraform_dispatch.yml
@@ -38,8 +38,21 @@ jobs:
             return response.data.head.ref;
           }
           
-    - name: Reusable Terra
-      uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml@main
-      with:
-        secrets:
-          token: ${{ secrets.GCP_TF_SA_KEY }}
+    - name: Checkout
+      uses: actions/checkout@v1
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+
+    - name: Terraform Init
+      run: terraform init
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.GCP_TF_SA_KEY }}
+
+    - name: Terraform format
+      run: terraform fmt -check
+
+    - name: Terraform Plan
+      run: terraform plan
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.GCP_TF_SA_KEY }}
