--- a/.github/workflows/workflow_terraform_dispatch.yml
+++ b/.github/workflows/workflow_terraform_dispatch.yml
@@ -13,7 +13,7 @@ jobs:
     defaults:
       run:
         shell: bash
-
+  
     runs-on: ubuntu-latest
     
     steps:
@@ -37,9 +37,11 @@ jobs:
             console.log("PR ref: " + response.data.head.ref);
             return response.data.head.ref;
           }
-          
-    - name: Terraform CI/CD
-      uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml
-      with:
+      
+  Terraform-Reusable-Workflow:
+    name: Terraform CI/CD
+    uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml
+    needs: WorkflowDispatchPRButtonTesting
+    with:
         secrets:
           token: ${{ secrets.GCP_TF_SA_KEY }}
