--- a/.github/workflows/workflow_terraform_dispatch.yml
+++ b/.github/workflows/workflow_terraform_dispatch.yml
@@ -37,11 +37,10 @@ jobs:
             console.log("PR ref: " + response.data.head.ref);
             return response.data.head.ref;
           }
-      
-  Terraform-Reusable-Workflow:
+  
+  TerraformReusableWorkflow:
     name: Terraform CI/CD
-    uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml
-    needs: WorkflowDispatchPRButtonTesting
+    uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml@main
     with:
-        secrets:
-          token: ${{ secrets.GCP_TF_SA_KEY }}
+      secrets:
+        token: ${{ secrets.GCP_TF_SA_KEY }}
