--- a/.github/ISSUE_TEMPLATE/bugreporting.yml
+++ b/.github/ISSUE_TEMPLATE/bugreporting.yml
@@ -14,23 +14,23 @@ body:
     attributes:
       label: Operating system
       description: "Which operating system do you use? Please provide the version as well."
-      placeholder: "macOS Big Sur 11.5.2"
+      placeholder: "macOS/Windows/Linux"
     validations:
       required: true  
   - type: input
     id: laravel
     attributes:
-      label: Laravel Version
-      description: "Please provide the full Laravel version of your project."
-      placeholder: "v8.6.1"
+      label: Operating System Version
+      description: "Please provide the full OS version of your project."
+      placeholder: "Big Sur - Windows 11 - Ubuntu"
     validations:
       required: true
   - type: input
     id: php
     attributes:
-      label: PHP Version
-      description: "Please provide the full PHP version that is powering Tinkerwell."
-      placeholder: "PHP 8.0.7, built: Jun  4 2021 01:50:04"
+      label: Kernel Version
+      description: "Please provide the Kernel that is powering your Source Code"
+      placeholder: "Python 3 - C++ - Java"
     validations:
       required: true
   - type: dropdown
@@ -48,7 +48,7 @@ body:
     id: bug-description
     attributes:
       label: Bug description
-      description: What happened?
+      description: Describe your bug
     validations:
       required: true
   - type: textarea
@@ -60,5 +60,5 @@ body:
     id: logs
     attributes:
       label: Relevant log output
-      description: If applicable, provide relevant log output. No need for backticks here.
+      description: If applicable, provide relevant log output.
       render: shell
