--- a/.github/workflows/workflow_terraform_dispatch.yml
+++ b/.github/workflows/workflow_terraform_dispatch.yml
@@ -40,6 +40,7 @@ jobs:
   
   TerraformReusableWorkflow:
     name: Reusable Workflow Setup
+    needs: [WorkflowDispatchPRButtonTesting]
     uses: Marquito94/Actions-Security/.github/workflows/reusable-terra.yml@main
     secrets:
       token: ${{ secrets.GCP_TF_SA_KEY }}
