--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,14 @@ jobs:
       - run:
           command: npm run build
           name: Build app
+workflows:
+  build_test_deploy: # this can be any name you choose
+    jobs:
+      - build_and_test
+      - deploy:
+          requires:
+            - build_and_test # only deploy if the build_and_test job has completed
+          filters:
+            branches:
+              only: main # only deploy when on main
+
