--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,10 @@ jobs:
           command: npm run build
           name: Build app
 workflows:
-  build_test_deploy: # this can be any name you choose
+  build_test_workflow: # this can be any name you choose
     jobs:
       - build_and_test
-      - deploy:
-          requires:
-            - build_and_test # only deploy if the build_and_test job has completed
-          filters:
-            branches:
-              only: main # only deploy when on main
+        filters:
+          branches:
+            only: main # only deploy when on main
 
