--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,4 @@ jobs:
 workflows:
   build_test_workflow: # this can be any name you choose
     jobs:
-      build_and_test:
-        filters:
-          branches:
-            only: main # only deploy when on main
-
+      - build_and_test
