--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 jobs:
   build_and_test: # this can be any name you choose
-    working_directory: /node-test
+    working_directory: ./node-test
     executor: node/default # use the default executor defined within the orb
     steps:
       - checkout
