--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,17 @@ orbs:
 
 jobs:
   build_and_test: # this can be any name you choose
-    working_directory: /home/circleci/project/node-test
     executor: node/default # use the default executor defined within the orb
     steps:
       - checkout
       - node/install-packages:
           pkg-manager: npm
       - run:
+          app-dir: ~/project/node-test
           command: npm run test
           name: Run tests
       - run:
+          app-dir: ~/project/node-test
           command: npm run build
           name: Build app
 workflows:
