--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,30 @@
 version: 2.1
-  jobs:
-    test:
-      docker:
-        - image: circleci/node:12.16
-      steps:
-        - checkout
-        - run: echo "Running tests"
-        - run: npm install
-        - run: npm test
-    build:
-      docker:
-        - image: circleci/node:12.16
-      steps:
-        - checkout
-        - run: echo "build project"
-        - npm install
-        - npm run build
-  workflows:
-    version: 2.1
-      test_build:
-        jobs:
-          - test
-          - build:
-            requires:
-              - test
+
+orbs:
+  node: circleci/node@5.0.2
+  
+jobs:
+  test:
+    docker:
+      - image: circleci/node:12.16
+    steps:
+      - checkout
+      - run: echo "Running tests"
+      - run: npm install
+      - run: npm test
+  build:
+    docker:
+      - image: circleci/node:12.16
+    steps:
+      - checkout
+      - run: echo "build project"
+      - npm install
+      - npm run build
+workflows:
+  version: 2.1
+    test_build:
+      jobs:
+        - test
+        - build:
+         requires:
+           - test
