--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   
 jobs:
   test:
+    executor: node/default
     docker:
       - image: circleci/node:12.16
     steps:
@@ -13,6 +14,7 @@ jobs:
       - run: npm install
       - run: npm test
   build:
+    executor: node/default
     docker:
       - image: circleci/node:12.16
     steps:
