--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
   
 jobs:
   test:
-    executor: node-default
+    executor: node/default
     docker:
       - image: circleci/node:12.16
     steps:
@@ -16,7 +16,7 @@ jobs:
       - run: npm install
       - run: npm test
   build:
-    executor: node-default
+    executor: node/default
     docker:
       - image: circleci/node:12.16
     steps:
