--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,10 @@ jobs:
           pkg-manager: npm
       - run:
           app-dir: ./node-test
+          command: npm install
+          name: Run install
+      - run:
+          app-dir: ./node-test
           command: npm run test
           name: Run tests
       - run:
