--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,9 @@ jobs:
       - node/install-packages:
           app-dir: ./node-test
           pkg-manager: npm
-      - run:
-          app-dir: ./node-test
-          command: npm install
-          name: Run install
+      - restore_cache:
+          name: Restore saved cache
+          key: v1-{{ checksum "package-lock.json" }}
       - run:
           app-dir: ./node-test
           command: npm run test
@@ -23,6 +22,11 @@ jobs:
           app-dir: ./node-test
           command: npm run build
           name: Build app
+      - save_cache:
+          name: Save npm package cache
+          key: v1-{{ checksum "package-lock.json" }}
+          paths:
+            - ~/.cache/node
       - persist_to_workspace:
           root: ~/project
           paths:
