--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}   
       - run:
+          app_dir: ./node-test
           name: install dependencies
           command: npm install
       - save_cache:
@@ -19,6 +20,7 @@ jobs:
           paths: 
             - node_modules   
       - run:
+          app_dir: ./node-test
           name: test
           command: npm run test
 workflows:
