--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 jobs:
   build_and_test:
-    working_directory: ~/project/node-test
+    working_directory: ./node-test
     docker:
       - image: cimg/node:16.11.1
     steps:
