--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
+  "scripts": {
+  "test": "mocha test.js --reporter mocha-junit-reporter --timeout 60000 --exit",
+  },
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
